JNDI: Usages of SimpleJndiName + generics in nucleus-resources
Signed-off-by: David Matějček <david.matejcek@omnifish.ee>